// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextArea /> should render 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="textarea"
  >
    <div
      class="BaseBox-bmPWx edjBu"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx grflbK"
        data-blade-component="base-box"
      >
        <label
          data-blade-component="form-label"
          for="textarea-1-input-2"
          style="width: auto; flex-shrink: 0; margin-right: 16px;"
        >
          <div
            class="BaseBox-bmPWx bqWBik"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx eeqPab"
              data-blade-component="base-box"
            >
              <p
                class="StyledBaseText-dVBfTO gaMIEc"
                data-blade-component="text"
              >
                Enter name
              </p>
              <div
                class="VisuallyHiddenweb__StyledVisuallyHidden-g3hls3-0 ijVANw"
                data-blade-component="visually-hidden"
              >
                <p
                  class="StyledBaseText-dVBfTO eIdQFo"
                  data-blade-component="text"
                />
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class="BaseBox-bmPWx BaseInputWrapper__StyledBaseInputWrapper-sc-27jk75-0 bsJDmb iWQtne"
        data-blade-component="base-box"
      >
        <textarea
          aria-describedby=""
          aria-disabled="false"
          aria-invalid="false"
          aria-required="false"
          class="StyledBaseInputweb__StyledBaseNativeInput-hsusrk-0 jQfoEc"
          data-blade-component="styled-base-input"
          id="textarea-1-input-2"
          rows="2"
          type="text"
        />
        <div
          class="BaseBox-bmPWx BaseInputAnimatedBorderweb__BaseInputStyledAnimatedBorder-sc-2cepod-0  dGtNgo"
          data-blade-component="base-box"
        />
      </div>
    </div>
    <div
      class="BaseBox-bmPWx jgxKDg"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx ctznZr"
        data-blade-component="base-box"
      />
    </div>
  </div>
</div>
`;

exports[`<TextArea /> should set number of lines 1`] = `
<div>
  <div
    class="BaseBox-bmPWx"
    data-blade-component="textarea"
  >
    <div
      class="BaseBox-bmPWx edjBu"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx grflbK"
        data-blade-component="base-box"
      >
        <label
          data-blade-component="form-label"
          for="textarea-91-input-92"
          style="width: auto; flex-shrink: 0; margin-right: 16px;"
        >
          <div
            class="BaseBox-bmPWx bqWBik"
            data-blade-component="base-box"
          >
            <div
              class="BaseBox-bmPWx eeqPab"
              data-blade-component="base-box"
            >
              <p
                class="StyledBaseText-dVBfTO gaMIEc"
                data-blade-component="text"
              >
                Enter name
              </p>
              <div
                class="VisuallyHiddenweb__StyledVisuallyHidden-g3hls3-0 ijVANw"
                data-blade-component="visually-hidden"
              >
                <p
                  class="StyledBaseText-dVBfTO eIdQFo"
                  data-blade-component="text"
                />
              </div>
            </div>
          </div>
        </label>
      </div>
      <div
        class="BaseBox-bmPWx BaseInputWrapper__StyledBaseInputWrapper-sc-27jk75-0 bsJDmb iWQtne"
        data-blade-component="base-box"
      >
        <textarea
          aria-describedby=""
          aria-disabled="false"
          aria-invalid="false"
          aria-required="false"
          class="StyledBaseInputweb__StyledBaseNativeInput-hsusrk-0 jQfoEc"
          data-blade-component="styled-base-input"
          id="textarea-91-input-92"
          rows="3"
          type="text"
        />
        <div
          class="BaseBox-bmPWx BaseInputAnimatedBorderweb__BaseInputStyledAnimatedBorder-sc-2cepod-0  dGtNgo"
          data-blade-component="base-box"
        />
      </div>
    </div>
    <div
      class="BaseBox-bmPWx jgxKDg"
      data-blade-component="base-box"
    >
      <div
        class="BaseBox-bmPWx ctznZr"
        data-blade-component="base-box"
      />
    </div>
  </div>
</div>
`;
